/*
 * Copyright 2010-2020 JetBrains s.r.o. and Kotlin Programming Language contributors.
 * Use of this source code is governed by the Apache 2.0 license that can be found in the license/LICENSE.txt file.
 */

package org.jetbrains.kotlin.ir.serialization

import org.jetbrains.kotlin.backend.common.serialization.proto.IrConstructorCall as ProtoIrConstructorCall
import org.jetbrains.kotlin.backend.common.serialization.proto.IrType as ProtoIrType
import org.jetbrains.kotlin.backend.common.serialization.proto.IrTypeParameter as ProtoIrTypeParameter
import org.jetbrains.kotlin.backend.common.serialization.proto.IrValueParameter as ProtoIrValueParameter
import org.jetbrains.kotlin.backend.common.serialization.proto.IrVariable as ProtoIrVariable
import org.jetbrains.kotlin.backend.common.serialization.proto.PirAnonymousInitializerCarrier
import org.jetbrains.kotlin.backend.common.serialization.proto.PirClassCarrier
import org.jetbrains.kotlin.backend.common.serialization.proto.PirConstructorCarrier
import org.jetbrains.kotlin.backend.common.serialization.proto.PirEnumEntryCarrier
import org.jetbrains.kotlin.backend.common.serialization.proto.PirErrorDeclarationCarrier
import org.jetbrains.kotlin.backend.common.serialization.proto.PirFieldCarrier
import org.jetbrains.kotlin.backend.common.serialization.proto.PirFunctionCarrier
import org.jetbrains.kotlin.backend.common.serialization.proto.PirLocalDelegatedPropertyCarrier
import org.jetbrains.kotlin.backend.common.serialization.proto.PirPropertyCarrier
import org.jetbrains.kotlin.backend.common.serialization.proto.PirTypeAliasCarrier
import org.jetbrains.kotlin.backend.common.serialization.proto.PirTypeParameterCarrier
import org.jetbrains.kotlin.backend.common.serialization.proto.PirValueParameterCarrier
import org.jetbrains.kotlin.descriptors.DescriptorVisibility
import org.jetbrains.kotlin.descriptors.Modality
import org.jetbrains.kotlin.ir.declarations.IrDeclarationOrigin
import org.jetbrains.kotlin.ir.declarations.IrDeclarationParent
import org.jetbrains.kotlin.ir.declarations.IrTypeParameter
import org.jetbrains.kotlin.ir.declarations.IrValueParameter
import org.jetbrains.kotlin.ir.declarations.IrVariable
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.AnonymousInitializerCarrier
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.AnonymousInitializerCarrierImpl
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.ClassCarrier
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.ClassCarrierImpl
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.ConstructorCarrier
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.ConstructorCarrierImpl
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.EnumEntryCarrier
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.EnumEntryCarrierImpl
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.ErrorDeclarationCarrier
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.ErrorDeclarationCarrierImpl
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.FieldCarrier
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.FieldCarrierImpl
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.FunctionCarrier
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.FunctionCarrierImpl
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.LocalDelegatedPropertyCarrier
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.LocalDelegatedPropertyCarrierImpl
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.PropertyCarrier
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.PropertyCarrierImpl
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.TypeAliasCarrier
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.TypeAliasCarrierImpl
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.TypeParameterCarrier
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.TypeParameterCarrierImpl
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.ValueParameterCarrier
import org.jetbrains.kotlin.ir.declarations.persistent.carriers.ValueParameterCarrierImpl
import org.jetbrains.kotlin.ir.expressions.IrBlockBody
import org.jetbrains.kotlin.ir.expressions.IrBody
import org.jetbrains.kotlin.ir.expressions.IrConstructorCall
import org.jetbrains.kotlin.ir.expressions.IrExpressionBody
import org.jetbrains.kotlin.ir.types.IrType

// Auto-generated by compiler/ir/ir.tree/src/org/jetbrains/kotlin/ir/persistentIrGenerator/Main.kt. DO NOT EDIT!

internal abstract class IrCarrierDeserializer {

    abstract fun deserializeParent(proto: Long): IrDeclarationParent

    abstract fun deserializeOrigin(proto: Int): IrDeclarationOrigin

    abstract fun deserializeAnnotations(proto: List<ProtoIrConstructorCall>): List<IrConstructorCall>

    abstract fun deserializeBody(proto: Int): IrBody

    abstract fun deserializeBlockBody(proto: Int): IrBlockBody

    abstract fun deserializeExpressionBody(proto: Int): IrExpressionBody

    abstract fun deserializeValueParameter(proto: ProtoIrValueParameter): IrValueParameter

    abstract fun deserializeTypeParameter(proto: ProtoIrTypeParameter): IrTypeParameter

    abstract fun deserializeSuperType(proto: Int): IrType

    abstract fun deserializeType(proto: ProtoIrType): IrType

    abstract fun deserializeSymbol(proto: Long): Nothing

    abstract fun deserializeVariable(proto: ProtoIrVariable): IrVariable

    abstract fun deserializeVisibility(proto: Long): DescriptorVisibility

    abstract fun deserializeModality(proto: Long): Modality

    fun deserializeAnonymousInitializerCarrier(proto: PirAnonymousInitializerCarrier): AnonymousInitializerCarrier {
        return AnonymousInitializerCarrierImpl(
            proto.lastModified,
            if (proto.hasParentSymbol()) deserializeParent(proto.parentSymbol) else null,
            deserializeOrigin(proto.origin),
            deserializeAnnotations(proto.annotationList),
            if (proto.hasBody()) deserializeBlockBody(proto.body) else null
        )
    }

    fun deserializeClassCarrier(proto: PirClassCarrier): ClassCarrier {
        return ClassCarrierImpl(
            proto.lastModified,
            if (proto.hasParentSymbol()) deserializeParent(proto.parentSymbol) else null,
            deserializeOrigin(proto.origin),
            deserializeAnnotations(proto.annotationList),
            if (proto.hasThisReceiver()) deserializeValueParameter(proto.thisReceiver) else null,
            deserializeVisibility(proto.flags),
            deserializeModality(proto.flags),
            proto.typeParametersList.map { deserializeTypeParameter(it) },
            proto.superTypesList.map { deserializeSuperType(it) }
        )
    }

    fun deserializeConstructorCarrier(proto: PirConstructorCarrier): ConstructorCarrier {
        return ConstructorCarrierImpl(
            proto.lastModified,
            if (proto.hasParentSymbol()) deserializeParent(proto.parentSymbol) else null,
            deserializeOrigin(proto.origin),
            deserializeAnnotations(proto.annotationList),
            deserializeType(proto.returnTypeField),
            if (proto.hasDispatchReceiverParameter()) deserializeValueParameter(proto.dispatchReceiverParameter) else null,
            if (proto.hasExtensionReceiverParameter()) deserializeValueParameter(proto.extensionReceiverParameter) else null,
            if (proto.hasBody()) deserializeBody(proto.body) else null,
            deserializeVisibility(proto.flags),
            proto.typeParametersList.map { deserializeTypeParameter(it) },
            proto.valueParametersList.map { deserializeValueParameter(it) }
        )
    }

    fun deserializeEnumEntryCarrier(proto: PirEnumEntryCarrier): EnumEntryCarrier {
        return EnumEntryCarrierImpl(
            proto.lastModified,
            if (proto.hasParentSymbol()) deserializeParent(proto.parentSymbol) else null,
            deserializeOrigin(proto.origin),
            deserializeAnnotations(proto.annotationList),
            if (proto.hasCorrespondingClass()) deserializeSymbol(proto.correspondingClass) else null,
            if (proto.hasInitializerExpression()) deserializeExpressionBody(proto.initializerExpression) else null
        )
    }

    fun deserializeErrorDeclarationCarrier(proto: PirErrorDeclarationCarrier): ErrorDeclarationCarrier {
        return ErrorDeclarationCarrierImpl(
            proto.lastModified,
            if (proto.hasParentSymbol()) deserializeParent(proto.parentSymbol) else null,
            deserializeOrigin(proto.origin),
            deserializeAnnotations(proto.annotationList)
        )
    }

    fun deserializeFieldCarrier(proto: PirFieldCarrier): FieldCarrier {
        return FieldCarrierImpl(
            proto.lastModified,
            if (proto.hasParentSymbol()) deserializeParent(proto.parentSymbol) else null,
            deserializeOrigin(proto.origin),
            deserializeAnnotations(proto.annotationList),
            deserializeType(proto.type),
            if (proto.hasInitializer()) deserializeExpressionBody(proto.initializer) else null,
            if (proto.hasCorrespondingPropertySymbol()) deserializeSymbol(proto.correspondingPropertySymbol) else null
        )
    }

    fun deserializeFunctionCarrier(proto: PirFunctionCarrier): FunctionCarrier {
        return FunctionCarrierImpl(
            proto.lastModified,
            if (proto.hasParentSymbol()) deserializeParent(proto.parentSymbol) else null,
            deserializeOrigin(proto.origin),
            deserializeAnnotations(proto.annotationList),
            deserializeType(proto.returnTypeField),
            if (proto.hasDispatchReceiverParameter()) deserializeValueParameter(proto.dispatchReceiverParameter) else null,
            if (proto.hasExtensionReceiverParameter()) deserializeValueParameter(proto.extensionReceiverParameter) else null,
            if (proto.hasBody()) deserializeBody(proto.body) else null,
            deserializeVisibility(proto.flags),
            proto.typeParametersList.map { deserializeTypeParameter(it) },
            proto.valueParametersList.map { deserializeValueParameter(it) },
            if (proto.hasCorrespondingPropertySymbol()) deserializeSymbol(proto.correspondingPropertySymbol) else null,
            proto.overriddenSymbolsList.map { deserializeSymbol(it) }
        )
    }

    fun deserializeLocalDelegatedPropertyCarrier(proto: PirLocalDelegatedPropertyCarrier): LocalDelegatedPropertyCarrier {
        return LocalDelegatedPropertyCarrierImpl(
            proto.lastModified,
            if (proto.hasParentSymbol()) deserializeParent(proto.parentSymbol) else null,
            deserializeOrigin(proto.origin),
            deserializeAnnotations(proto.annotationList),
            deserializeType(proto.type),
            if (proto.hasDelegate()) deserializeVariable(proto.delegate) else null,
            if (proto.hasGetter()) deserializeSymbol(proto.getter) else null,
            if (proto.hasSetter()) deserializeSymbol(proto.setter) else null
        )
    }

    fun deserializePropertyCarrier(proto: PirPropertyCarrier): PropertyCarrier {
        return PropertyCarrierImpl(
            proto.lastModified,
            if (proto.hasParentSymbol()) deserializeParent(proto.parentSymbol) else null,
            deserializeOrigin(proto.origin),
            deserializeAnnotations(proto.annotationList),
            if (proto.hasBackingField()) deserializeSymbol(proto.backingField) else null,
            if (proto.hasGetter()) deserializeSymbol(proto.getter) else null,
            if (proto.hasSetter()) deserializeSymbol(proto.setter) else null
        )
    }

    fun deserializeTypeAliasCarrier(proto: PirTypeAliasCarrier): TypeAliasCarrier {
        return TypeAliasCarrierImpl(
            proto.lastModified,
            if (proto.hasParentSymbol()) deserializeParent(proto.parentSymbol) else null,
            deserializeOrigin(proto.origin),
            deserializeAnnotations(proto.annotationList),
            proto.typeParametersList.map { deserializeTypeParameter(it) },
            deserializeType(proto.expandedType)
        )
    }

    fun deserializeTypeParameterCarrier(proto: PirTypeParameterCarrier): TypeParameterCarrier {
        return TypeParameterCarrierImpl(
            proto.lastModified,
            if (proto.hasParentSymbol()) deserializeParent(proto.parentSymbol) else null,
            deserializeOrigin(proto.origin),
            deserializeAnnotations(proto.annotationList),
            proto.superTypesList.map { deserializeSuperType(it) }
        )
    }

    fun deserializeValueParameterCarrier(proto: PirValueParameterCarrier): ValueParameterCarrier {
        return ValueParameterCarrierImpl(
            proto.lastModified,
            if (proto.hasParentSymbol()) deserializeParent(proto.parentSymbol) else null,
            deserializeOrigin(proto.origin),
            deserializeAnnotations(proto.annotationList),
            if (proto.hasDefaultValue()) deserializeExpressionBody(proto.defaultValue) else null,
            deserializeType(proto.type),
            if (proto.hasVarargElementType()) deserializeType(proto.varargElementType) else null
        )
    }
}
